--- a/Desafios/Desaf(002)/style.css
+++ b/Desafios/Desaf(002)/style.css
@@ -56,5 +56,14 @@ a:hover img {
     border: 1px solid rgb(0, 0, 0)
 }
 @media (max-width: 800px) {
-
+    nav {
+        flex-flow: row wrap;
+        margin: 0px;
+        width: 100%;
+        justify-content: center;
+        align-items: start;
+    }
+    a {
+        margin-left: 15px;
+    }
 }
