--- a/Desafios/Desaf(002)/style.css
+++ b/Desafios/Desaf(002)/style.css
@@ -51,6 +51,8 @@ img {
     height: 60px;   
 }
 a {
+    color: white;
+    text-decoration: none;
     height: 70px;
     width: 60px;
 }
@@ -85,17 +87,20 @@ p {
         align-items: flex-end;
     }
     a {
+        color: white;
+        text-decoration: none;
         text-align: center;
-        margin-bottom: 20px;
+        margin-bottom: 60px;
     }
     p {
         position: absolute;
         top: 0px;
         left: 5px;
+        font-size: 1.3em;
     }
     img {
-        height: 40px;
-        width: 40px;
+        height: 50px;
+        width: 50px;
     }
 }
 @media (max-width: 400px) {
