--- a/Desafios/Desaf(002)/style.css
+++ b/Desafios/Desaf(002)/style.css
@@ -71,13 +71,13 @@ p {
 }
 @media (max-width: 800px) {
     main {
-        background-size: 400px 400px;
+        background-size: 450px 450px;
     }
     iframe {
-        height: 255px;
-        width: 255px;
-        top: 50.7%;
-        left: 50.2%;
+        height: 283px;
+        width: 283px;
+        top: 50.6%;
+        left: 50.6%;
     }
     nav {
         flex-flow: row wrap;
@@ -95,9 +95,10 @@ p {
     p {
         position: absolute;
         top: 0px;
-        left: 40%;
-        transform: translateX(-30%);
+        left: 50%;
+        transform: translateX(-50%);
         font-size: 1.4em;
+        text-align: center;
     }
     img {
         height: 50px;
