--- a/Desafios/Desaf(002)/style.css
+++ b/Desafios/Desaf(002)/style.css
@@ -77,7 +77,8 @@ p {
         height: 283px;
         width: 283px;
         top: 50.6%;
-        left: 50.6%;
+        left: 50.3%;
+        box-shadow: 0px 0px 5px rgba(73, 73, 73, 0.616);
     }
     nav {
         flex-flow: row wrap;
