--- a/Desafios/Desaf(002)/style.css
+++ b/Desafios/Desaf(002)/style.css
@@ -71,11 +71,11 @@ p {
 }
 @media (max-width: 800px) {
     main {
-        background-size: 450px 450px;
+        background-size: 470px 470px;
     }
     iframe {
-        height: 283px;
-        width: 283px;
+        height: 295px;
+        width: 295px;
         top: 50.6%;
         left: 50.3%;
         box-shadow: 0px 0px 5px rgba(73, 73, 73, 0.616);
@@ -94,12 +94,14 @@ p {
         margin-bottom: 120px;
     }
     p {
+        margin-top: 10px;
         position: absolute;
         top: 0px;
         left: 50%;
         transform: translateX(-50%);
         font-size: 1.4em;
         text-align: center;
+        height: 50px;
     }
     img {
         height: 50px;
