--- a/Desafios/Desaf(001)/style.css
+++ b/Desafios/Desaf(001)/style.css
@@ -43,13 +43,14 @@ img {
     box-shadow: 1px 1px 5px rgba(27, 27, 27, 0.678);
     margin: 15px 0px;
     height: 60px;   
+
 }
 a {
     height: 70px;
     width: 60px;
 }
 a:hover img {
-    transform: scale(1.1);
-    transition-duration: 0.3s;
-    border: 1px solid rgb(255, 255, 255)
+    transform: translateX(-3px) translateY(-3px);
+    border: 1px solid rgb(255, 255, 255);
+    transition: transform 0.3s, border 0.3s;
 }
